:bug: FIX: Erratic scrolling on mobile was due to height set to 100vh for all devices

--- a/styles/index.css
+++ b/styles/index.css
@@ -32,9 +32,6 @@ body {
   @apply bg-black bg-opacity-0 md:hover:bg-opacity-5 cursor-pointer
 }
 
-.scrolling-touch { -webkit-overflow-scrolling: touch; }
-.scrolling-auto { -webkit-overflow-scrolling: auto; }
-
 /* Start purging... */
 @tailwind utilities;
 /* Stop purging. */
